--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<head>
+    <meta charset="utf-8">
+    <title>Alfonso Sánchez | Game Developer portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="Css/index.css" rel="stylesheet">
+    <link href="Css/cover.css" rel="stylesheet">
+</head>
 
-<title>Hello, world!</title>
-  </head>
-<body>
-    <h1>Hello, world!</h1>
+<body class="align-items-center">
+
+    <div class="cover-container d-flex p-3 mx-auto flex-column ">
+        <div class="row align-items-center col-100">
+        	<div class="mr-5">
+				<a class="name">Alfonso Sánchez</a>
+			</div>
+			<div class="mt-3">
+				<a class="portfolio">PORTFOLIO</a>
+			</div>
+        </div>
+           
+    	<div class="row align-items-center mt-3">
+            <p style="font-size: 13px;">
+                I'm a student of Video Game Design and Development Bachelor's degree at CITM (UPC). I like to work in several disciplines of the video game industry such as design and programming. My goal is to join a studio as a programmer or designer and learn everything possible to finish specializing in any of the two roles.
+            </p>
+    	</div>
+    	
+		<div class="row align-items-center">
+			<div class="mr-5">
+				<a class="links" href="studentproyects.html">Student projects</a>
+			</div>
+			<div class="m-5">
+				<a class="links" href="jamproyects.html">Jam projects</a>
+			</div>
+			<div class="m-5">
+				<a class="links" href="contact.html">Contact</a>
+			</div>
+		</div>
+    </div>
+
+
+	
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
