--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
            
     	<div class="row align-items-center mt-3">
-            <p style="font-size: 13px;">
+            <p style="font-size: 0.8rem;">
                 I'm a student of Video Game Design and Development Bachelor's degree at CITM (UPC). I like to work in several disciplines of the video game industry such as design and programming. My goal is to join a studio as a programmer or designer and learn everything possible to finish specializing in any of the two roles.
             </p>
     	</div>
