--- a/studentproyects.html
+++ b/studentproyects.html
@@ -297,7 +297,7 @@
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="img/Pinball/1.png" class="d-block w-100" alt="...">
+                            <img src="img/pinball/1.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
                 </div>
